# kor_tts_esp_ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/kor_tts_esp_ros2/tts/: cin_publisher.hpp  sp.hpp
script-py/: kor_tts_service.py
script-py/songhee/: config.yaml  meta.yaml  origin-config.yaml  readme  requirements.txt  tokens.txt
src/: main.cpp
src/tts/: cin_publisher.cpp  sp.cpp
