<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kor_tts_esp_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="terrificmn@emal.com">terrificmn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>python3-sphinx</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>builtin_interfaces</depend>
  <!-- we manually build cartographer and msgs. commented out not to install cartographer and cartographer_ros_msgs, -->
  <!-- <depend>cartographer</depend> -->
  <!-- <depend>cartographer_ros_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
